@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<nifty xmlns="http://nifty-gui.sourceforge.net/nifty-1.3.xsd">
+
+    <screen id="loading_screen" controller="ru.game.aurora.gui.LoadingScreenController">
+        <layer id="layer" childLayout="absolute">
+            <control id="generation_window" name="window" closeable="false" hideOnClose="true" width="60%"
+                     height="350px"
+                     x="20%" y="30%">
+                <panel childLayout="vertical" margin="10px">
+                    <panel height="256px" childLayout="horizontal">
+                        <image id="shuttle_image" width="256px" height="256px"/>
+                        <text width="*" id="generation_text" height="256px" style="base-font"/>
+                    </panel>
+                </panel>
+            </control>
+        </layer>
+    </screen>
+
+</nifty>
