@@ -91,7 +91,9 @@ public class GUI {
 
         hackUnicodeFont("dpix_8pt.ttf");
         nifty.registerScreenController(new MainMenuController(con));
+        nifty.registerScreenController(new LoadingScreenController());
         nifty.addXml("gui/screens/main_menu.xml");
+        nifty.addXml("gui/screens/loading_screen.xml");
         nifty.addXml("gui/screens/settings_screen.xml");
     }
 
